--- a/app/design/frontend/base/default/template/contacts/form.phtml
+++ b/app/design/frontend/base/default/template/contacts/form.phtml
@@ -61,7 +61,8 @@
         </ul>
     </div>
   
-        <p class="required left">* Required Fields</p><br />
+        <p class="required left">* Required Fields</p>
+		<div class="clear"></div>
         <input type="text" name="hideit" id="hideit" value="" style="display:none !important;" />
         <button type="submit" title="<?php echo Mage::helper('contacts')->__('Submit') ?>" class="button"><span><span><?php echo Mage::helper('contacts')->__('Submit') ?></span></span></button>
 
