referral on dashboard test

--- a/app/design/frontend/default/rooja/template/customer/dashboard.phtml
+++ b/app/design/frontend/default/rooja/template/customer/dashboard.phtml
@@ -35,7 +35,7 @@
      
         <?php echo $this->getChildHtml('info') ?>
         <?php echo $this->getChildHtml('address') ?>
-		<?php /* echo $this->getChildHtml('affiliate')*/ ?>
+		<?php echo $this->getChildHtml('affiliate') ?>
 
 		<?php /*WDCA CODE BEGINS*/?>
 		<?php if(!Mage::getStoreConfigFlag('advanced/modules_disable_output/TBT_Rewards') 
