--- a/app/design/frontend/default/rooja/template/customer/account/dashboard.phtml
+++ b/app/design/frontend/default/rooja/template/customer/account/dashboard.phtml
@@ -44,7 +44,8 @@
 	
 
 	<div class="page-invite half-col right">
-		<fieldset>
+		<?php echo $this->getChildHtml('affiliate') ?>
+		<?php /* <fieldset>
 				<h3 class="page-invite-head">Invite your Friends to Join Rooja!</h3>
 				<p>Copy this link and share to receive Rooja credits!</p>
 
@@ -59,7 +60,7 @@
 				<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=philosophie"></script>
 		</fieldset>
 		
-		<a class="right" href="/rewardsref/customer/index">My Invitations</a>
+		<a class="right" href="/rewardsref/customer/index">My Invitations</a> */ ?>
 	</div>
 
     <div class="half-col  d-account">
