--- a/app/design/frontend/default/rooja/template/customer/account/dashboard.phtml
+++ b/app/design/frontend/default/rooja/template/customer/account/dashboard.phtml
@@ -32,6 +32,8 @@
         <h1>My Dashboard</h1>
     <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
     <?php echo $this->getChildHtml('hello') ?>
+	<?php echo $this->getChildHtml('recentorders') ?>
+
     <?php echo $this->getChildHtml('top') ?>
 	<?php /*WDCA CODE BEGINS*/?>
 	<?php if(!Mage::getStoreConfigFlag('advanced/modules_disable_output/TBT_Rewards') 
@@ -41,37 +43,13 @@
 	<?php endif;?>
 	<?php /*WDCA CODE ENDS*/?> 
 	
-	
-
-	<div class="page-invite half-col right">
-		<?php echo $this->getChildHtml('affiliate') ?>
-		<?php /* <fieldset>
-				<h3 class="page-invite-head">Invite your Friends to Join Rooja!</h3>
-				<p>Copy this link and share to receive Rooja credits!</p>
-
-			       <input class="invite-input" type="text" value="<?php echo $this->getReferralUrl(); ?>" />
-			               <input class="invite-button" type="submit" title="send" value="Copy" />
-
-							<div class="addthis_toolbox addthis_default_style">
-							<a class="addthis_button_facebook"><img src="<?php echo $this->getSkinUrl('images/icons/facebook-blue-24.png'); ?>" alt="facebook icon"></a>
-							<a class="addthis_button_twitter"><img src="<?php echo $this->getSkinUrl('images/icons/twitter-teal-24.png'); ?>" alt="twitter icon"></a>
-							</div>
-							<script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>			
-				<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=philosophie"></script>
-		</fieldset>
+	<?php echo $this->getChildHtml('affiliate') ?>
 		
-		<a class="right" href="/rewardsref/customer/index">My Invitations</a> */ ?>
-	</div>
-
-    <div class="half-col  d-account">
-	           <a class="editable right" href="<?php echo $this->getUrl('customer/account/edit') ?>"><?php echo $this->__('Edit') ?></a>
-        <div class="box-head">
-            <h2><?php echo $this->__('Account Information') ?></h2>
-        </div>
+    <div class="half-col d-account">
+	      <a class="editable right" href="<?php echo $this->getUrl('customer/account/edit') ?>"><?php echo $this->__('Edit') ?></a>
+          <h2>Account Information</h2>
         <?php echo $this->getChildHtml('info') ?>
     </div>
        <?php echo $this->getChildHtml('address') ?>
-    <?php echo $this->getChildHtml('info1') ?>
-    <?php echo $this->getChildHtml('info2') ?>
 </div>
 
