--- a/app/design/frontend/default/rooja/template/page/html/head.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/head.phtml
@@ -48,9 +48,7 @@
 <!--Product page OG Meta tags-->
 <meta property="og:title" content="<?php echo trim(Mage::registry('current_product')->getName())?>"/>
 <meta property="og:type" content="product"/>
-<?php if ($this->helper('catalog/product')->canUseCanonicalTag()): ?>
-<meta property="og:url" content="<?php echo trim(Mage::registry('current_product')->getProductUrl()) ?>"/>
-<?php endif; ?>
+<meta property="og:url" content="<?php echo $this->helper('core/url')->getCurrentUrl() ?>"/>
 <meta property="og:description" content="Like my pick? Visit Rooja.com now and get access to top designer brands at upto 60% off retail. The website requires membership. Good news: membership is free. :)"/>
 <meta property="og:image" content="<?php echo Mage::helper('catalog/image')->init(Mage::registry('current_product'), 'small_image')->resize(100,100);?>"/>
 <?php else: ?>
@@ -63,7 +61,7 @@
 <?php if(trim(Mage::registry('current_category')->getImageUrl()=="")): ?>
 <meta property="og:image" content="http://rooja.com/_images/rooja-logo-fb.png"/>
 <?php else: ?>
-<meta property="og:image" content="<?php echo trim(Mage::registry('current_category')->getImageUrl())?>"/>
+<meta property="og:image" content="<?php echo trim(Mage::registry('current_category')->getThumbnailUrl())?>"/>
 <?php endif; ?>
 <?php endif; ?>
 <?php endif; ?>
