--- a/app/design/frontend/base/default/template/rewardsref/customer/referral/affiliate.phtml
+++ b/app/design/frontend/base/default/template/rewardsref/customer/referral/affiliate.phtml
@@ -1,4 +1,4 @@
-<div class="page-invite half-col right">
+<div class="page-invite">
 	<fieldset>
 			<h3 class="page-invite-head">Invite your Friends to Join Rooja!</h3>
 			<p>Copy this link and share to receive Rooja credits!</p>
