--- a/app/design/frontend/default/rooja/template/rewards/customer/summary.phtml
+++ b/app/design/frontend/default/rooja/template/rewards/customer/summary.phtml
@@ -43,7 +43,7 @@
  * @author     WDCA Sweet Tooth Team <contact@wdca.ca>
  */
 ?>
-<div class="half-col right">
+<div class="half-col">
 
 	<div class="head head-alt2">
 		<h4 class="title"><?php echo $this->__('Points Summary'); ?></h4>
