--- a/app/design/frontend/default/rooja/template/customer/account/dashboard/info.phtml
+++ b/app/design/frontend/default/rooja/template/customer/account/dashboard/info.phtml
@@ -24,7 +24,7 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-<section class="col2-set">
+<section class="col2-set small">
     <section class="col-1">
         <section class="box">
             <section class="box-title">
