--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -1230,6 +1230,7 @@ h3 .product-name {font-family:helvetica, arial, sans-serif; font-size:12px;}
 /********** Referrals & Points */
 .points {
 	font-size:12px;
+	padding:20px 0;
 }
 
 /********** Invite a Friend */
