--- a/app/design/frontend/default/rooja/template/rewards/customer/summary.phtml
+++ b/app/design/frontend/default/rooja/template/rewards/customer/summary.phtml
@@ -60,6 +60,6 @@
     		<?php echo $this->getSummaryMsg() /* this can be customized completely by modifying the display config option or by just removing this line and adding your own content.*/ ?>
     
 	<?php if ($this->doShowRewardsLink()): ?>
-		<a href="<?php echo $this->getUrl('rewards/customer'); ?>"><?php echo $this->__('Visit My Points & Rewards Section') ?></a>
+		<a class="reward-link" href="<?php echo $this->getUrl('rewards/customer'); ?>"><?php echo $this->__('View Your Rewards') ?></a>
 	<?php endif; ?>
 </div>
