--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -1229,8 +1229,13 @@ h3 .product-name {font-family:helvetica, arial, sans-serif; font-size:12px;}
 
 /********** Referrals & Points */
 .points {
-	font-size:12px;
+	font-size:11px;
 	padding:20px 0;
+}
+
+.reward-link {
+	text-decoration: underline;
+	font-size:11px;
 }
 
 /********** Invite a Friend */
