--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -348,6 +348,9 @@ p.required { font-size:10px; text-align:right; color:#d68536; margin-bottom:0px;
 .toolbar-bottom {}
 
 /* Data Table */
+
+#data-table .data-table {background: #e0e0e0;}
+
 .data-table { width:100%; font-size:12px;}
 .data-table th { padding:5px;/* border:1px solid #ddd;*/ font-weight:bold; white-space:nowrap; }
 .data-table td { padding:5px; /*border:1px solid #ddd;*/ }
@@ -1249,7 +1252,7 @@ referrals h1 { color: #431F4C;}
 fieldset .email-invite {background:#e0e0e0;}
 fielset h4{padding: 10px 0 25px;}
 
-.page-invite {background:#c8d7da;padding:15px 12px;}
+.page-invite {background:#c8d7da;padding:15px 12px; margin-top: 25px;}
 
 input.invite-input {height: 36px;line-height:36px;padding:0px 8px;width:250px;}
 input.invite-button{height: 36px; color: #fff; font-size:14px; padding: 0px 10px; background: #868686;}
