--- a/app/design/frontend/default/rooja/layout/page.xml
+++ b/app/design/frontend/default/rooja/layout/page.xml
@@ -50,6 +50,7 @@ Default layout, loads most of the pages
                 <action method="addJs"><script>mage/translate.js</script></action>
                 <action method="addJs"><script>mage/cookies.js</script></action>
                 <action method="addJs"><script>jquery/jquerynoConflict.min.js</script></action>
+				<action method="addJs"><script>jquery/jquery.slideshow.min.js</script></action>
 
                 <block type="page/js_cookie" name="js_cookies" template="page/js/cookie.phtml"/>
 
