--- a/app/design/frontend/default/rooja/template/customer/form/login.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/login.phtml
@@ -54,11 +54,21 @@
 </section><!--End Content-->
 </div>
 	<section id="brands">
-		<ul>
-			<li class="one"><img src="<?php echo $this->getSkinUrl('images/splash/logos/marc-jacobs.png') ?>" alt="Marc Jacobs"></li>
-			<li class="two"><img src="<?php echo $this->getSkinUrl('images/splash/logos/calvin-klein.png') ?>" alt="Calvin Klein"></li>
-			<li class="last three"><img src="<?php echo $this->getSkinUrl('images/splash/logos/burberry.png') ?>" alt="Burberry"></li>
-		</ul>
+		<div class="brandCol fl">
+			<img src="<?php echo $this->getSkinUrl('images/splash/logos/marc-jacobs.png') ?>" alt="Marc Jacobs">
+			<img src="<?php echo $this->getSkinUrl('images/splash/logos/boss.png') ?>" alt="Hugo Boss">
+			<img src="<?php echo $this->getSkinUrl('images/splash/logos/gucci.png') ?>" alt="gucci">
+		</div>
+		<div id="brandCol fl">
+			<img src="<?php echo $this->getSkinUrl('images/splash/logos/calvin-klein.png') ?>" alt="Calvin Klein">
+			<img src="<?php echo $this->getSkinUrl('images/splash/logos/fendi.png') ?>" alt="Fendi">
+			<img src="<?php echo $this->getSkinUrl('images/splash/logos/versace.png') ?>" alt="versace">
+		</div>
+		<div id="brandCol last fl">
+			<img src="<?php echo $this->getSkinUrl('images/splash/logos/burberry.png') ?>" alt="Burberry">
+			<img src="<?php echo $this->getSkinUrl('images/splash/logos/lacoste.png') ?>" alt="Lacoste">
+			<img src="<?php echo $this->getSkinUrl('images/splash/logos/diesel.png" alt="Diesel') ?>">
+		</div>
 	</section>
 </div>
 
