--- a/app/design/frontend/default/rooja/template/customer/form/login.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/login.phtml
@@ -59,12 +59,12 @@
 			<img src="<?php echo $this->getSkinUrl('images/splash/logos/boss.png') ?>" alt="Hugo Boss">
 			<img src="<?php echo $this->getSkinUrl('images/splash/logos/gucci.png') ?>" alt="gucci">
 		</div>
-		<div id="brandCol fl">
+		<div class="brandCol fl">
 			<img src="<?php echo $this->getSkinUrl('images/splash/logos/calvin-klein.png') ?>" alt="Calvin Klein">
 			<img src="<?php echo $this->getSkinUrl('images/splash/logos/fendi.png') ?>" alt="Fendi">
 			<img src="<?php echo $this->getSkinUrl('images/splash/logos/versace.png') ?>" alt="versace">
 		</div>
-		<div id="brandCol last fl">
+		<div class="brandCol last fl">
 			<img src="<?php echo $this->getSkinUrl('images/splash/logos/burberry.png') ?>" alt="Burberry">
 			<img src="<?php echo $this->getSkinUrl('images/splash/logos/lacoste.png') ?>" alt="Lacoste">
 			<img src="<?php echo $this->getSkinUrl('images/splash/logos/diesel.png" alt="Diesel') ?>">
