--- a/app/design/frontend/default/rooja/template/page/lockdown.phtml
+++ b/app/design/frontend/default/rooja/template/page/lockdown.phtml
@@ -56,7 +56,7 @@
   })();
 
 </script>
-<script type="text/javascript">
+<!--<script type="text/javascript">
 		jQuery(document).ready(function() {
 			jQuery('#slideshow').slideshow({
 				timeout: 2000,
@@ -64,7 +64,7 @@
 			});
 
 	       });
-</script>
+</script>-->
 
 </head>
 <body class="">
