brand logos on homepage

--- a/app/design/frontend/default/rooja/template/customer/form/login.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/login.phtml
@@ -67,7 +67,7 @@
 		<div class="brandCol last fl">
 			<img src="<?php echo $this->getSkinUrl('images/splash/logos/burberry.png') ?>" alt="Burberry">
 			<img src="<?php echo $this->getSkinUrl('images/splash/logos/lacoste.png') ?>" alt="Lacoste">
-			<img src="<?php echo $this->getSkinUrl('images/splash/logos/diesel.png') ?>" alt="Diesel') ?>">
+			<img src="<?php echo $this->getSkinUrl('images/splash/logos/diesel.png') ?>" alt="Diesel">
 		</div>
 	</section>
 </div>
