--- a/app/design/frontend/default/rooja/template/page/lockdown.phtml
+++ b/app/design/frontend/default/rooja/template/page/lockdown.phtml
@@ -58,11 +58,11 @@
 </script>
 <script type="text/javascript">
 		jQuery(document).ready(function() {
-			jQuery('#slideshow').slideshow({
-				timeout: 2000,
-				type: 'random',
-			});
-
+			jQuery('.brandCol').innerfade({
+					speed: 750,
+					timeout: 2000,
+					type: 'random_start'
+				});
 	       });
 </script>
 
