--- a/app/design/frontend/default/rooja/template/page/lockdown.phtml
+++ b/app/design/frontend/default/rooja/template/page/lockdown.phtml
@@ -58,11 +58,21 @@
 </script>
 <script type="text/javascript">
 		jQuery(document).ready(function() {
-			jQuery('.brandCol').innerfade({
+			jQuery('#brandCol1').innerfade({
 					speed: 750,
 					timeout: 2000,
 					type: 'random_start'
 				});
+				jQuery('#brandCol2').innerfade({
+						speed: 750,
+						timeout: 2000,
+						type: 'random_start'
+					});
+					jQuery('#brandCol3').innerfade({
+							speed: 750,
+							timeout: 2000,
+							type: 'random_start'
+						});
 	       });
 </script>
 
