--- a/skin/frontend/default/rooja/css/login.css
+++ b/skin/frontend/default/rooja/css/login.css
@@ -97,8 +97,8 @@ form input#loginBtn{
    position:relative;
 }
 
-#brands .brandCol{display:block;width:126px;text-align:center;position:relative;}
-#brands .brandCol img{vertical-align:middle;}
+#brands .brandCol{display:block;width:126px;height:19px;text-align:center;position:relative;}
+#brands .brandCol img{vertical-align:middle;position:static !important;}
 
 #brandCol2{left:126px;}
 #brandCol3{left:252px;}
