--- a/skin/frontend/default/rooja/css/login.css
+++ b/skin/frontend/default/rooja/css/login.css
@@ -98,7 +98,7 @@ form input#loginBtn{
 }
 
 #brands .brandCol{display:block;width:126px;height:19px;text-align:center;position:relative;}
-#brands .brandCol img{vertical-align:middle;}
+#brands .brandCol img{vertical-align:middle;left:50%;margin-left:-45px;}
 
 #brandCol2{left:126px;}
 #brandCol3{left:252px;}
