--- a/app/design/frontend/default/rooja/template/page/lockdown.phtml
+++ b/app/design/frontend/default/rooja/template/page/lockdown.phtml
@@ -61,17 +61,20 @@
 			jQuery('#brandCol1').innerfade({
 					speed: 1000,
 					timeout: 5500,
-					type: 'random_start'
+					type: 'random_start',
+					containerheight: '19px'
 				});
 				jQuery('#brandCol2').innerfade({
 						speed: 1000,
 						timeout: 5000,
-						type: 'random_start'
+						type: 'random_start',
+						containerheight: '19px'
 					});
 					jQuery('#brandCol3').innerfade({
 							speed: 1000,
 							timeout: 5750,
-							type: 'random_start'
+							type: 'random_start',
+							containerheight: '19px'
 						});
 	       });
 </script>
