--- a/app/design/frontend/base/default/template/rewardsref/customer/referral.phtml
+++ b/app/design/frontend/base/default/template/rewardsref/customer/referral.phtml
@@ -4,7 +4,7 @@
 </div>
 <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
 
-<?php echo $this->getChildHtml('affiliate'); ?>
+<div class="half-col right"><?php echo $this->getChildHtml('affiliate'); ?></div>
 <?php echo $this->getChildHtml('refer_form'); ?>
 <?php //echo $this->getChildHtml('preferences'); ?>
 <div class="clear"></div>
