--- a/app/design/frontend/default/rooja/template/customer/account/dashboard/address.phtml
+++ b/app/design/frontend/default/rooja/template/customer/account/dashboard/address.phtml
@@ -29,7 +29,7 @@
 		            <a class="editable right" href="<?php echo $this->getAddressBookUrl() ?>"><?php echo $this->__('Manage') ?></a>
         <div class="box-content">
 	            <h2><?php echo $this->__('Address Book') ?></h2>
-			<div class="">	                
+			<div class="addressBox">	                
 				<div class="col-1 third">
 					<p><strong><?php echo $this->__('Billing') ?></strong></p>
 				</div>
@@ -41,7 +41,7 @@
 				</div>
 			</div>
 
-			<div class="">
+			<div class="addressBox clear">
 				<div class="col-1 third">
                 	<p><strong><?php echo $this->__('Shipping') ?></strong></p>
 				</div>
