--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -1248,7 +1248,7 @@ h3 .product-name {font-family:helvetica, arial, sans-serif; font-size:12px;}
 h3.page-invite-head  {color: #000; margin-top:15px;}
 
 referrals h1 { color: #431F4C;}
-.ref-form {background:#e0e0e0;padding:15px 12px;}
+.ref-form {background:#e0e0e0;padding:15px 12px;margin-top:25px;}
 fieldset .email-invite {background:#e0e0e0;}
 fielset h4{padding: 10px 0 25px;}
 
