--- a/app/design/frontend/base/default/template/customer/address/book.phtml
+++ b/app/design/frontend/base/default/template/customer/address/book.phtml
@@ -61,7 +61,7 @@
 			<div class="">	                
 				<div class="col-1 third">
 				  <?php if($_pAddsses = Mage::getSingleton('customer/session')->getCustomer()->getDefaultBilling()): ?>
-					<p>Default Billing</p>
+					<p><strong>Default Billing</strong></p>
 				</div>
 
                 <div class="">
@@ -85,7 +85,7 @@
 			<div class="">
 				<div class="col-1 third">
 				        <?php if($_pAddsses = Mage::getSingleton('customer/session')->getCustomer()->getDefaultShipping()): ?>
-                	<p><strong>Default Shipping</p>
+                	<p><strong>Default Shipping</strong></p>
 				</div>
 				
 				<div class="col-2 twothird">
