--- a/app/design/frontend/base/default/template/customer/address/book.phtml
+++ b/app/design/frontend/base/default/template/customer/address/book.phtml
@@ -64,7 +64,7 @@
 					<p><strong>Default Billing</strong></p>
 				</div>
 
-                <div class="">
+                <div class="col-2 twothird">
 	               <address><p>
 	                    <?php echo $this->getAddressHtml(Mage::getSingleton('customer/session')->getCustomer()->getAddressById($_pAddsses)) ?>
 	                </p></address>
