--- a/app/design/frontend/base/default/template/customer/address/edit.phtml
+++ b/app/design/frontend/base/default/template/customer/address/edit.phtml
@@ -140,7 +140,7 @@
                 <?php endif; ?>
             </li>
         </ul>
-        <p class="required left"><?php echo $this->__('* Required Fields') ?></p>
+        <p class="required right"><?php echo $this->__('* Required Fields') ?></p>
         <button type="submit" title="<?php echo $this->__('Save Address') ?>" class="button"><span><span><?php echo $this->__('Save Address') ?></span></span></button>
     </div>
 </form>
