--- a/app/design/frontend/default/rooja/template/rewards/customer/transfers.phtml
+++ b/app/design/frontend/default/rooja/template/rewards/customer/transfers.phtml
@@ -47,9 +47,7 @@
         $table_id = 'my-transfers-table-' . md5($this->headerText);
 ?>
 <div class="mypoints-transfers">
-  <h2>
-    <?php echo $this->headerText; ?>
-  </h2>
+  <h3><?php echo $this->headerText; ?></h3>
   <div class="content">
     <!--Checks too see if the customer has any tramsfers  -->
     <?php if(sizeof($transferArray)): ?>
