--- a/app/design/frontend/default/rooja/template/rewards/customer/summary.phtml
+++ b/app/design/frontend/default/rooja/template/rewards/customer/summary.phtml
@@ -44,7 +44,7 @@
  */
 ?>
 <div class="points">	
-		<strong><?php echo $this->__('Points Summary'); ?></strong><br>
+		<h3>Points Summary</h3>
  		<?php echo $this->__('You have %s in your account.', $this->getCustomerPointsSummary()); ?>
     	    <?php if($this->getDaysUntilExpiry()): ?>
     	       <?php echo $this->__('Your points balance will expire in %s days.', $this->getDaysUntilExpiry()); ?>
