--- a/app/design/frontend/base/default/template/sales/order/recent.phtml
+++ b/app/design/frontend/base/default/template/sales/order/recent.phtml
@@ -42,7 +42,7 @@
             <tr>
                 <th><?php echo $this->__('Order #') ?></th>
                 <th><?php echo $this->__('Date') ?></th>
-                <th><?php echo $this->__('Ship To') ?></th>
+                <th width="30%"><?php echo $this->__('Ship To') ?></th>
                 <th><span class="nobr"><?php echo $this->__('Order Total') ?></span></th>
                 <th><?php echo $this->__('Status') ?></th>
                 <th>&nbsp;</th>
