--- a/app/design/frontend/base/default/template/sales/order/history.phtml
+++ b/app/design/frontend/base/default/template/sales/order/history.phtml
@@ -42,7 +42,7 @@
         <tr>
             <th><?php echo $this->__('Order #') ?></th>
             <th><?php echo $this->__('Date') ?></th>
-            <th><?php echo $this->__('Ship To') ?></th>
+            <th width="28%"><?php echo $this->__('Ship To') ?></th>
             <th><span class="nobr"><?php echo $this->__('Order Total') ?></span></th>
             <th><span class="nobr"><?php echo $this->__('Order Status') ?></span></th>
             <th>&nbsp;</th>
